--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TriviaQuizApp2</string>
+    <string name="btn_registro">Registro</string>
+    <string name="text_bienvenida" />
+    <string name="btn_login" />
 </resources>
